@@ -10,6 +10,7 @@ Version 2.0.0rc8 - The "???????????" version.
 		* Context menu for download items only enables relevant information now
 		* Context menu little optimization (removed an unuseful loop) and Open File fix
 		* Added bitmap button wich pops-up the last status log line (useful when it doesn't fit the window
+		* Merged Preview and Open File and enabled Open File
 		* Fixed: Setting "A4AF to others" was broken
 
 	Phoenix:
